layout:Solved scrollbar issue with different browsers, Link: Add Twiiter in my contact list

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,36 +23,36 @@
 
 /* Firefox */
 * {
-  scrollbar-width: thin;
-  scrollbar-color: #ddd #28282b;
+  scrollbar-width: none;
+  scrollbar-color: transparent transparent;
 }
 
 /* Webkit-based browsers (Chrome, Safari, newer versions of Edge) */
 *::-webkit-scrollbar {
-  width: 4px; /* Adjust the width as needed */
+  width: 0px; /* Adjust the width as needed */
 }
 
 *::-webkit-scrollbar-track {
   background: none;
-  width: 50px;
+  width: 1px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: gray;
+  background-color: #28282b;
   border-radius: 30px;
 }
 
 /* Microsoft Edge and Internet Explorer */
 *::-ms-scrollbar-thumb {
-  width: 20px; /* Adjust the width as needed */
+  width: 0px; /* Adjust the width as needed */
 }
 
 *::-ms-scrollbar-track {
-  background: #ffffff;
-  width: 50px;
+  background: transparent;
+  width: 0;
 }
 @media screen and (max-width: 768px) {
   *::-webkit-scrollbar {
-    width: 2px; /* Adjust the width as needed */
+    width: 0.5px; /* Adjust the width as needed */
   }
 }
